--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.idea
 CMakeCache.txt
 CMakeFiles
 CMakeScripts
@@ -5,3 +6,5 @@ Makefile
 cmake_install.cmake
 install_manifest.txt
 CTestTestfile.cmake
+/libs/jsoncpp/
+/libs/sws/
