fix #7 Adds the OpenCV as a dependecy on CMakeLists.txt

--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,6 @@ CTestTestfile.cmake
 /libs/jsoncpp/
 /libs/sws/
 /libs/googletest/
-/libs/boost_1_61_0/
+/libs/boost_*/
+/libs/opencv-*/
+/libs/opencv_contrib-*/
