fix #2 Implements the image device

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(THIRD_PARTY_LIBRARIES "${CMAKE_SOURCE_DIR}/libs" CACHE FILEPATH "Third party
 set(THIRD_PARTY_LIBRARIES "/home/jsantos/projects/mote/vision/libs")
 set(TEST ON CACHE FILEPATH "Enable testing for this build")
 set(TEST_OUTPUT ${CMAKE_BINARY_DIR}/tests CACHE FILEPATH "Output directory of tests")
-set(TEST_RESOURCE_DIR ${CMAKE_SOURCE_DIR}/test/resource CACHE FILEPATH "Resource folder for tests")
+set(TEST_RESOURCE_DIR ${CMAKE_SOURCE_DIR}/test/resources CACHE FILEPATH "Resource folder for tests")
 add_definitions(-DTEST_RESOURCE_DIR="${TEST_RESOURCE_DIR}")
 
 # Simple-Web-Server
