--- a/.travis.yml
+++ b/.travis.yml
@@ -59,9 +59,10 @@ before_install:
 - mkdir -p build/debug
 - cd build/debug
 - cmake -config Debug ../..
+- make
 install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then wget --no-check-certificate http://cmake.org/files/v3.4/cmake-3.4.3-Linux-x86_64.tar.gz   ;fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then tar -xzf cmake-3.4.3-Linux-x86_64.tar.gz                                                  ;fi
   - make
 script:
-- make
+- make test
