--- a/.travis.yml
+++ b/.travis.yml
@@ -59,10 +59,11 @@ before_install:
 install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then wget --no-check-certificate http://cmake.org/files/v3.4/cmake-3.4.3-Linux-x86_64.tar.gz   ;fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then tar -xzf cmake-3.4.3-Linux-x86_64.tar.gz                                                  ;fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export PATH=$PWD/cmake-3.4.3-Linux-x86_64/bin:$PATH
 before_script:
 - mkdir -p bin/debug
-- ./do_cmake.sh
 - cd bin/debug
+- cmake -config Debug ../..
 - make
 script:
 - make test
