--- a/.travis.yml
+++ b/.travis.yml
@@ -67,3 +67,7 @@ before_script:
 - make
 script:
 - make test
+notifications:
+  slack:
+    rooms:
+      - braso:tEALYg1H3830ANKkpnsWx1nv#travis-ci
