Adds libboost dependency to be installed instead of downloading and compiling it

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,13 @@ addons:
     # add PPAs with more up-to-date toolchains
     - ubuntu-toolchain-r-test
     - llvm-toolchain-precise-3.6
+    - boost-latest
     packages:
     # install toolchains
     - gcc-5
     - g++-5
     - clang-3.6
+    - libboost1.61-all-dev
 before_install:
 - echo $LANG
 - echo $LC_ALL
