Changes the slack team to be notified on Mote updates

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,4 +44,4 @@ script:
 notifications:
   slack:
     rooms:
-      - braso:tEALYg1H3830ANKkpnsWx1nv#travis-ci
+      - motehq:J9n6X9QdA9QFmF4wHfqouwlY#travis-ci
