Implements the global `mote::Config` class #14

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ set(COVERAGE OFF CACHE BOOL "Enables coverage configuration")
 set(PROFILING OFF CACHE BOOL "Enables profiling configuration")
 add_definitions(-DTEST_RESOURCE_DIR="${TEST_RESOURCE_DIR}")
 add_definitions(-DBOOST_LOG_DYN_LINK=1)
+add_definitions(-DDEFAULT_CONFIG_FILE="${CMAKE_SOURCE_DIR}/config/vision.json")
 message("-- Libraries at ${THIRD_PARTY_LIBRARIES}")
 if (${ENABLE_TEST})
 	message("-- Tests enabled")
