Implements opening the device from `/dev/video0` #15

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -475,6 +475,8 @@ set(SOURCE_FILES
 
 	src/exceptions.h
 	src/exceptions.cpp
+	src/capture/exceptions.cpp
+	src/capture/exceptions.h
 	)
 
 add_executable(vision
